force-app/main/default/objects/Self_Sufficiency_Matrix__c/Self_Sufficiency_Matrix__c.object-meta.xml
<CustomObject>
    <description>Standardized survivor self-sufficiency assessment across 10 life domains, scored 1-5. Per the Indiana DV Self-Sufficiency Matrix 2013 model. Run at intake, mid-program, and exit to track outcomes for funder reporting.</description>
    <label>Self-Sufficiency Matrix</label>
    <nameField>
        <displayFormat>SSM-{00000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self-Sufficiency Matrix Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>