force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <description>The date this assessment was conducted.</description>
    <label>Assessment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>