force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <description>Stage of the survivor's engagement when this assessment was taken. Intake = baseline at admission; Mid-Program = progress check; Exit = final outcome for funder reporting.</description>
    <label>Checkpoint</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake (Baseline)</label>
            </value>
            <value>
                <fullName>Mid-Program</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>