force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The client (Contact) this assessment is for.</description>
    <inlineHelpText>Required. The survivor being assessed.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Self-Sufficiency Matrix Assessments</relationshipLabel>
    <relationshipName>Self_Sufficiency_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>