force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Employment_Income__c.field-meta.xml
<CustomField>
    <fullName>Employment_Income__c</fullName>
    <description>Employment status, income level, and economic stability. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Employment / Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>