force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Family_Support__c.field-meta.xml
<CustomField>
    <fullName>Family_Support__c</fullName>
    <description>Support network: family, friends, community connections. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Family / Social Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>