force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Financial_Literacy__c.field-meta.xml
<CustomField>
    <fullName>Financial_Literacy__c</fullName>
    <description>Understanding of budgeting, credit, banking. Pairs with the Financial_Counseling__c tracking object. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Financial Literacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>