force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <description>Access to adequate, nutritious food. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Food Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>