force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Health_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Health_Coverage__c</fullName>
    <description>Access to medical care and health insurance. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Health Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>