force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Housing__c.field-meta.xml
<CustomField>
    <fullName>Housing__c</fullName>
    <description>Housing stability and adequacy: shelter, safety of housing, risk of homelessness. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>