force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <description>Legal status, pending matters, access to legal assistance (protection orders, custody, immigration, etc.). Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>