force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health__c</fullName>
    <description>Mental health status and access to mental health services. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Mental Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>