force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Qualitative context for the scores: what's driving the numbers, what's changing, what to focus on next.</description>
    <label>Assessor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>