force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <description>Safety from the abuser and risk of further harm. The most DV-specific domain. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Safety from Abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>