force-app/main/default/objects/Self_Sufficiency_Matrix__c/fields/Substance_Use__c.field-meta.xml
<CustomField>
    <fullName>Substance_Use__c</fullName>
    <description>Substance use patterns and recovery support if applicable. Scored on the standard 5-point self-sufficiency scale.</description>
    <label>Substance Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFTS_Self_Sufficiency_Scale</valueSetName>
    </valueSet>
</CustomField>