force-app/main/default/objects/Self_Sufficiency_Matrix__c/validationRules/Assessment_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Date_Not_Future</fullName>
    <active>true</active>
    <description>Assessments record observed state, not predictions.</description>
    <errorConditionFormula>Assessment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Assessment Date cannot be in the future. Use today or an earlier date.</errorMessage>
</ValidationRule>